<resources>
    <!--TUTORIAL-->
    <string name="tutorialPic">Tutorial Picture</string>
    <string name="tutorial_welcome">Welcome!</string>
    <!--MAINACTIVITY-->
    <string name="app_name">Captions Scanner</string>
    <string name="cc_example">Placeholder for captions.\nScan, then click on any word!</string>
    <string name="holdandrelease">HOLD AND RELEASE</string>
    <!--NAVIGATION DRAWER-->
    <string name="version_name">v.%1$s</string>
    <string name="my_words">Words</string>
    <string name="practice">Practice</string>
    <string name="report_bugs">Report bug</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="words_scanned">%1$d words stored!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--WORDACTIVITY-->
    <string name="word_title">development</string>
    <string name="powered">Powered by Yandex.Translate</string>
    <string name="no_translation"><i>N/A</i></string>
    <string name="word_no_exist">Sorry! This word doesn\'t exist in dictionary.\nCheck the spelling/form.</string>
    <string name="edit_word">Edit</string>
    <string name="edit_text">Edit the word:</string>
    <string name="confirm_word">Confirm</string>
    <string name="banned">Application currently disabled due to suspected abuse.</string>
    <string name="store_fail">Failed to store word</string>
    <string name="saved_word">Word stored!</string>
    <!--GAMEACTIVITY-->
    <string name="toastnowords">Go ahead and try scanning!</string>
    <string name="title_noword">No words scanned</string>
    <string name="reply">write…</string>
    <string name="correct">Correct!</string>
    <string name="incorrecct">Incorrect!</string>
    <!--STOREDWORDSACTIVITY-->
    <string name="no_data">No words scanned</string>
    <!--WARNING DIALOG-->
    <string name="warning_title">Slow down!</string>
    <string name="warning_message">Application detects abnormal usage. Please wait at least one minute before trying again.\n\nThank you for understanding!</string>
    <string name="warning_ok">OK</string>
    <!--SETTINGS-->
    <string name="mother_tongue">Mother Tongue</string>
    <string-array name="languages">
        <item>[not selected]</item>
        <item>Albanian</item>
        <item>Armenian</item>
        <item>Azerbaijani</item>
        <item>Belarusian</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>German</item>
        <item>Georgian</item>
        <item>Greek</item>
        <item>Hungarian</item>
        <item>Italian</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Macedonian</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Serbian</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
    </string-array>
</resources>
